  do_browse_from()
	- Fix path checking to fix bad paths, escaping 
	  the operating directory, new function readable_dir() (David 
	  Benbennick).
  do_browser()
	- Fix incorrect path check for check_operating_dir() 
	  (David Benbennick).
	- Fix goto directory operating dir check and tilde expansion
	  (David Benbennick).
	- Even more checks and operating dir fixes (David Benbennick).
  open_file()
	- Fix FD leak with file load error (David Benbennick).
  add_open_file()
	- Revert the fix for the supposed minor logic error from before;
	  it was keeping some updates from happening when they should,
	  which was leading to segfaults with both multibuffer and view
	  mode on. (DLR; found by David Benbennick)
  save_history()
	- Fix nrealloc return value being ignored (David Benbennick).
- global.c:
  thanks_for_all_the_fish()
	- Fix compiling with DEBUG and multibuffer (David Benbennick).
- nano.c:
  do_char()
	- Remove unneeded check_statblank() (David Benbennick).
  do_int_spell_fix(), do_int_speller()
	- Fix crashes with mark position, current_x position, 
	  and edit_update args (David Benbennick).
  do_justify()
	- Unset KEEP_CUTBUFFER so nano won't crash with subsequent
	  ^K cuts and justifies (David Benbennick).
  do_mouse()
	- Fix the mouse code to work with lines longer than COLS and
	  with the proper positioning, including special characters
	  (David Benbennick).
  do_preserve_msg():
	- Unsplit error message into a single fprintf call (Jordi).
  main()
	- Call load_file with arg 0 for insert, as we aren't really
	  doing an insert, allows new_file() to run if we open a 
	  non-file at startup.
  usage()
  	- Remove gettext markings from -p/--preserve (Jordi).
	- Revamp -H option message to fit in 80 column terminal.
  window_init()
	- Fix leaking *WINDOWs (no pun intended) (David Benbennick).
- search.c:
  do_search(), do_replace_loop()
	- Fix edit_update call to use CENTER instead of current_x
	  (related to David Benbennick's fixes for spelling).